# esp32_aws_iot_http

./: CMakeLists.txt  README.md  http_s3_ud.c  http_s3_ud.h  http_s3_utils.c  http_s3_utils.h  sigv4_config.h
